# aiwolf-nlp-json-converter

./: pyproject.toml  requirements.txt
.github/: README.md
src/aiwolf-nlp-converter/: converter.py  gameInfo.py  gameSetting.py  talkHistory.py
src/aiwolf-nlp-json-converter/: whisperHistory.py
src/aiwolf_nlp_json_converter/: __init__.py  converter.py  gameInfo.py  gameSetting.py  talkHistory.py  whisperHistory.py
tests/: test_gameInfo.py
