[project]
name = "aiwolf-nlp-json-converter"
version = "0.0.1"
description = "aiwolf-nlp-json-converter"
license = { file = "LICENSE" }
requires-python = ">=3.8"
readme = "README.md"
dependencies = ["aiwolf-nlp-common >= 0.2.1"]
authors = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
]
maintainers = [
  { name = "aiwolfdial", email = "aiwolf@kanolab.net" },
  { name = "nwatanabe", email = "nwatanabe@kanolab.net" },
]
keywords = ["aiwolf"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["build>=1.2.2.post1", "pytest>=8.3.3", "twine>=5.1.1"]
lint = ["ruff>=0.7.4"]

[project.urls]
Homepage = "https://aiwolf.org"